Section#Header -correct spacing and sizing inside and around the search bar
-fix console error

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -36,14 +36,20 @@ body{
                 height: 100%; 
                 div.main-inner{
                     position: relative;
+                    //CHANGED ~12LINES
                     div#header-wrapper-sticky-wrapper-support{
+                        display: none;
                         width: 100%;
                         height: 209px;
                         background-color: #333645;
                         position: absolute;
                         top: 0;
                         z-index: 0;
+                        @media (min-width: 992px){
+                            display: block;
+                        }
                     }
+                    //CHANGED END
                     //sticky header
                     div#header-wrapper-sticky-wrapper{
                         width: 100%;
